# Save-The-Token

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: agentic-rag-design.md  agentic-rag-token-roadmap.md  benchmark.md  release-readiness.md
docs/mdpr-readme/: accessibility-review.json  evidence-ledger.json  narrative-review.json
docs/mdpr-teaser/: accessibility-review.json  evidence-ledger.json  teaser-spec.json  teaser.md
skills/save-the-token-mcp-doctor/: SKILL.md
skills/save-the-token-mcp-doctor/agents/: openai.yaml
src/save_the_token/: __init__.py  active_retrieval.py  benchmark.py  budget.py  cli.py  config.py  context_budget.py  diagnostics.py  evaluation.py  evidence_cache.py  evidence_ordering.py  instruction_routing.py  models.py  orchestration.py  probe.py  prompt_compression.py  redaction.py  schema_digest.py
tests/: test_active_retrieval.py  test_benchmark.py  test_budget.py  test_cli.py  test_config_scan.py  test_context_budget.py  test_diagnostics.py  test_evaluation.py  test_evidence_cache.py  test_evidence_ordering.py  test_instruction_routing.py  test_orchestration_advice.py  test_probe.py  test_prompt_compression.py  test_schema_digest.py
tests/fixtures/benchmark-smoke/: repo-commits.json
tests/fixtures/benchmark-smoke/repos/owner__good/: AGENTS.md
tests/fixtures/benchmark-smoke/repos/owner__missing/: AGENTS.md
